--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                     <div class="gallery no-padding col-lg-12 col-sm-12">
                         <div class="col-lg-4 col-sm-6 spring no-padding">
                             <div class="item-img">
-                                <a class="single-image" href="images/gall1.jpeg"></a>
+                                <a class="single-image" href="images/LaPalma.jpeg"></a>
                                 <div class="part-img">
-                                    <img src="images/gall1.jpeg" alt="image" />
+                                    <img src="images/LaPalma.jpeg" alt="image" />
                                     <div class="overlay-img">
                                         <h4>Spring</h4>
                                         <h6>Autumn Leaves</h6>
@@ -179,9 +179,9 @@
                         </div>
                         <div class="col-lg-4 col-sm-6 spring no-padding">
                             <div class="item-img">
-                                <a class="single-image" href="images/gall2.jpeg"></a>
+                                <a class="single-image" href="images/energy-efficiency.png"></a>
                                 <div class="part-img">
-                                    <img src="images/gall2.jpeg" alt="image" />
+                                    <img src="images/energy-efficiency.png" alt="image" />
                                     <div class="overlay-img">
                                         <h4>Spring</h4>
                                         <h6>Flower Pot</h6>
